// Changelog in installer

--- a/com_joomlaquiz_expert/admin/installer/done.html
+++ b/com_joomlaquiz_expert/admin/installer/done.html
@@ -85,7 +85,33 @@
 									</tr>
 									<tr>
 										<td colspan="2" style="padding-left:20px" align="justify">
-										<br />
+									<br />
+									---------------- Version 3.4.1 -- [10-December-2015] -----------------<br/>
+									1. Added Front End results view;<br/>
+									2. Added an opportunity to specify the number of questions form the Question pool to be shown on one page;<br/>
+									3. Added Joomla Quiz Deluxe Global Setting Section;<br/>
+									4. Fixed jquery conflicts;<br/>
+									5. Fixed minor bugs;<br/>
+									---------------- Version 3.4.0 -- [06-October-2015] -----------------<br/>
+									1. Added new Bootsratp 3 theme;<br/>
+									2. Implemented native Joomla! categories and manual drag-and-drop categories ordering;<br/>
+									3. Improved "Fill-in-the-blank" question type and results view layout;<br/>
+									4. Added redirect depending on absolute score;<br/>
+									5. Improved skipped function;<br/>
+									6. Fixed article behavior inside Learning Paths;<br/>
+									7. Added anonymous users’ results display in modules;<br/>
+									8. Improved correct/incorrect answers feedback and feedback for each answer option;<br/>
+									9. Added SEF routing for links in quiz content;<br/>
+									10.Fixed certificate issues;<br/>
+									11.Fixed results emailing;<br/>
+									12.Fixed question chain rare glitches;<br/>
+									13.Fixed multilingual support issues;<br/>
+									14.Fixed time zone issues;<br/>
+									15.Improved quiz question and status filters;<br/>
+									16.Fixed “Save as copy” function;<br/>
+									17.Fixed quizzes and quiz questions import;<br/>
+									18.Fixed issue with "quiz results date and time" and "spent time;<br/>
+									19.Fixed a problem with the latest VirtueMart integration.<br/>
 									---------------- 3.3.2.001 Build -- [11-June-2014] -----------------<br/>
 									1. Added quiz and learning path permissions.<br/>
 									2. Learning Path - ability to view articles from Subcategories<br/>
